2006-07-11  Zack Weinberg  <zackw@panix.com>

	* diff_patch.cc (struct hunk_consumer): Change type of
	encloser_last_match and encloser_last_search from ssize_t to
	vector<string>::const_reverse_iterator.
	(hunk_consumer constructor): Initialize them with a.rend().
	(hunk_consumer::find_encloser): Restructure to do less pointer
	arithmetic.  Add some invariant checks.

2006-07-11  Zack Weinberg  <zackw@panix.com>

	* cmd_merging.cc (merge_two): New function.
	(CMD(merge)): Rewrite again - only merge one pair of heads on each
	pass.  Also, skip all the work of finding a good choice if there
	are only two heads. Use merge_two.
	(CMD(explicit_merge)): Use merge_two.

2006-07-11  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Two new strings to translate.

2006-07-10  Derek Scherger  <derek@echologic.com>

	* restrictions.cc (node_restriction::includes,
	path_restriction::includes): handle --depth with empty restriction
	(test_include_depth_0_empty_restriction): new test for depth with
	empty restriction
	* restrictions.cc (add_restrictions_tests): add it to the testsuite
	* sanity.hh (dump): new template function for dumping variables
	when fiddling around or debugging
	(DUMP): macro wrapper for new dump function

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* tests/diff_output_formats: Merge from mainline.  Correct
	expected output where necessary.  Use long switches in __driver__.lua.
	* diff_patch.cc (hunk_consumer::find_encloser): Use
	reverse_iterators instead of mucking with ssize_t.
	(unidiff_hunk_writer::flush_hunk)
	(ctxdiff_hunk_writer::flush_hunk): Scan what is about to be
	output, and give find_encloser exactly the right position.
	(make_diff): Collapse the overload that takes vectors of strings
	into its sole caller, the other overload.  * diff_patch.hh: Remove
	prototype for deleted overload of make_diff.

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* tests/database_is_closed_on_signal_exit/__driver__.lua: Invert